--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"> -->
   <body>
     <div id="main">
+      <div class="menu">
+        <nav class="m-nav">
+          <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="#page-4">Products</a></li>
+            <li><a href="./pages/about.html">About</a></li>
+            <li><a href="./pages/contact/index.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
       <div id="page-1">
         <div id="slider">
           <img src="./resources/p1.webp" alt="" />
@@ -39,6 +49,9 @@
               </div>
             </div>
           </nav>
+          <div class="menu-icon">
+            <i class="fa-solid fa-bars"></i>
+          </div>
         </header>
         <div id="hero">
           <section>
@@ -66,81 +79,78 @@
       </div>
       <div id="page-2">
         <section id="p2-ani">
-
-        <h1>Why choose us?</h1>
-        <div class="boxs">
-          <div class="box">
-            <img
-              src="https://img.freepik.com/free-vector/iso-certification-illustration_23-2148688046.jpg?t=st=1712877246~exp=1712880846~hmac=1f01137352dffb6452b54ab1eb2da184ee1e523c795a6aaff7b550cc7c2fcc18&w=740"
-              alt=""
-            />
-            <span
-              >Quality <br />
-              Assurance</span
-            >
+          <h1>Why choose us?</h1>
+          <div class="boxs">
+            <div class="box">
+              <img
+                src="https://img.freepik.com/free-vector/iso-certification-illustration_23-2148688046.jpg?t=st=1712877246~exp=1712880846~hmac=1f01137352dffb6452b54ab1eb2da184ee1e523c795a6aaff7b550cc7c2fcc18&w=740"
+                alt=""
+              />
+              <span
+                >Quality <br />
+                Assurance</span
+              >
+            </div>
+            <div class="box">
+              <img
+                src="https://img.freepik.com/premium-vector/business-woman-concept-flat-vector-illustration-white-background_951964-3790.jpg?w=740"
+                alt=""
+              />
+              <span
+                >Industry <br />
+                Expertise</span
+              >
+            </div>
+            <div class="box">
+              <img
+                src="https://img.freepik.com/premium-vector/factory-production-packaging-illustration-concept-white-background_701961-1690.jpg?w=740"
+                alt=""
+              />
+              <span>Manufacturing Excellence</span>
+            </div>
+            <div class="box">
+              <img
+                src="https://img.freepik.com/free-vector/product-quality-concept-illustration_114360-7301.jpg?t=st=1712878331~exp=1712881931~hmac=968b51b58422bff1a20a7f9f432641de93af835fa63ca59ac3b69937f78dfc83&w=740"
+                alt=""
+              />
+              <span
+                >Customer <br />
+                Satisfaction</span
+              >
+            </div>
+            <div class="box">
+              <img
+                src="https://img.freepik.com/free-vector/destinatio-concept-illustration_114360-333.jpg?t=st=1712878931~exp=1712882531~hmac=8526624b6a75eff96e38db9ffa9cadce19f5079635de364ad55263cf21a61340&w=740"
+                alt=""
+              />
+              <span
+                >Global <br />
+                Reach</span
+              >
+            </div>
+            <div class="box">
+              <img
+                src="https://img.freepik.com/free-vector/flat-customer-support-illustration_23-2148899114.jpg?t=st=1712879017~exp=1712882617~hmac=a82c2280ed1a0fd95c847caa0d78a55493d06339b5e5f356d39edcd9134534d8&w=740"
+                alt=""
+              />
+              <span
+                >Customer <br />
+                Support</span
+              >
+            </div>
           </div>
-          <div class="box">
-            <img
-              src="https://img.freepik.com/premium-vector/business-woman-concept-flat-vector-illustration-white-background_951964-3790.jpg?w=740"
-              alt=""
-            />
-            <span
-              >Industry <br />
-              Expertise</span
-            >
-          </div>
-          <div class="box">
-            <img
-              src="https://img.freepik.com/premium-vector/factory-production-packaging-illustration-concept-white-background_701961-1690.jpg?w=740"
-              alt=""
-            />
-            <span>Manufacturing Excellence</span>
-          </div>
-          <div class="box">
-            <img
-              src="https://img.freepik.com/free-vector/product-quality-concept-illustration_114360-7301.jpg?t=st=1712878331~exp=1712881931~hmac=968b51b58422bff1a20a7f9f432641de93af835fa63ca59ac3b69937f78dfc83&w=740"
-              alt=""
-            />
-            <span
-              >Customer <br />
-              Satisfaction</span
-            >
-          </div>
-          <div class="box">
-            <img
-              src="https://img.freepik.com/free-vector/destinatio-concept-illustration_114360-333.jpg?t=st=1712878931~exp=1712882531~hmac=8526624b6a75eff96e38db9ffa9cadce19f5079635de364ad55263cf21a61340&w=740"
-              alt=""
-            />
-            <span
-              >Global <br />
-              Reach</span
-            >
-          </div>
-          <div class="box">
-            <img
-              src="https://img.freepik.com/free-vector/flat-customer-support-illustration_23-2148899114.jpg?t=st=1712879017~exp=1712882617~hmac=a82c2280ed1a0fd95c847caa0d78a55493d06339b5e5f356d39edcd9134534d8&w=740"
-              alt=""
-            />
-            <span
-              >Customer <br />
-              Support</span
-            >
-          </div>
-        </div>
-      </section>
-
+        </section>
       </div>
       <div id="page-8">
         <section id="p8-ani">
-
           <h1>Our Story</h1>
           <p>
             CAG industries is one of the leading manufacturers & exporters of
-            Silver impregnated graphite contact in India. We design, manufacture,
-            and export all kinds of SIG products. Conceived with a notion to
-            provide world-class and supreme quality heating elements we have
-            established a brand name where our quality and work speaks louder than
-            words
+            Silver impregnated graphite contact in India. We design,
+            manufacture, and export all kinds of SIG products. Conceived with a
+            notion to provide world-class and supreme quality heating elements
+            we have established a brand name where our quality and work speaks
+            louder than words
           </p>
           <a href="./pages/about.html">
             <button>Know More</button>
@@ -149,21 +159,21 @@
       </div>
       <div id="page-3">
         <section id="p3-ani">
-
-        <h1>High Safety Application</h1>
-        <span>Application in railway signaling relay</span>
-        <a href="#app-page">
-          <button>View More</button>
-        </a>
-      </section>
-
+          <h1>High Safety Application</h1>
+          <span>Application in railway signaling relay</span>
+          <a href="#app-page">
+            <button>View More</button>
+          </a>
+        </section>
       </div>
       <div id="page-4">
         <div class="bg-img">
           <img src="./resources/p7.jpg" alt="" />
         </div>
         <div>
-          <h1 style="color: #000; font-size: 5vmax">Featured Products</h1>
+          <h1 style="color: #000; font-size: 5vmax; text-align: center">
+            Featured Products
+          </h1>
         </div>
         <div class="p-boxs">
           <a href="./pages/product1.html">
@@ -193,7 +203,7 @@
             alt=""
           />
         </div>
-        <section  id="sec-1">
+        <section id="sec-1">
           <img class="s-img" src="./resources/p1.webp" alt="" />
           <div class="text">
             <h1>Silver Impregnated Graphite Contacts</h1>
@@ -213,7 +223,9 @@
               of the contacts, leading to improper interaction between the
               mating surfaces.
             </p>
-            <button>View More</button>
+            <a href="./pages/product1.html">
+              <button>View More</button>
+            </a>
           </div>
         </section>
         <section id="sec-2">
@@ -234,7 +246,9 @@
               suitable for high safety applications such as railway signaling,
               traffic signaling, and numerous other applications.
             </p>
-            <button>View More</button>
+            <a href="./pages/product2.html">
+              <button>View More</button>
+            </a>
           </div>
           <img class="s-img2" src="./resources/p2.webp" alt="" />
         </section>
@@ -270,7 +284,9 @@
               customers who rely on Cag Industries' products for critical
               contact applications.
             </p>
-            <button>View More</button>
+            <a href="./pages/about.html">
+              <button>Read More</button>
+            </a>
           </div>
         </section>
         <div id="app-page" style="margin-top: 5vmax">
@@ -310,11 +326,10 @@
           </div>
           <nav>
             <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">Gallery</a></li>
-              <li><a href="">Products</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./pages/product1.html">Products</a></li>
+              <li><a href="./pages/about.html">About</a></li>
+              <li><a href="./pages/contact/index.html">Contact</a></li>
             </ul>
           </nav>
         </section>
@@ -341,7 +356,6 @@
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
   <script src="./script/animation.js"></script>
-  <script src="./script/script.js"></script>
   <script
     src="https://kit.fontawesome.com/8cfc6428ac.js"
     crossorigin="anonymous"
