--- a/pages/about.html
+++ b/pages/about.html
@@ -3,13 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="../style/about.css" />
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/footer.css">
   </head>
   <body>
     <div id="main">
+      <div class="menu">
+        <nav class="m-nav">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./product1.html">Products</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact/index.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
       <div id="page-1">
         <header class="header">
           <div id="logo">
@@ -30,6 +40,9 @@
               </div>
             </div>
           </nav>
+          <div class="menu-icon">
+            <i class="fa-solid fa-bars"></i>
+          </div>
         </header>
         <section class="con">
           <div class="head">
@@ -48,17 +61,7 @@
                 At the core of Cag Industries' ethos lies a commitment to professionalism and quality of service. The driving force behind the firm's success is the proven skills and dedication of its people. With a team of technically trained and qualified professionals, Cag Industries strives to establish and maintain effective schemes for developing a foolproof quality management system. This system is implemented under the direct supervision of management, ensuring that every aspect of production meets the highest standards of quality and reliability.
               </p>
               <br />
-              <div class="d-log">
-                <p>
-                  "Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Praesentium quo ipsum placeat numquam vero nam."
-                </p>
-              </div>
-              <br />
-              <span style="font-size: 1.7vmax; font-weight: 600"
-                >Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed
-                pariatur temporibus aliquid, tempora dicta assumenda.</span
-              >
+              
               <p>
                 Cag Industries is not content with resting on past achievements; instead, it remains a dynamic and vibrant entity focused on continuous improvement. The firm places a strong emphasis on constant upgradation of its systems, technology, and human resources to achieve and exceed the quality targets set by the organization. Through a combination of hard work and modern management techniques, Cag Industries actively promotes excellence in the quality of its products, leading to greater efficiency and profitability.
               </p>
@@ -104,11 +107,10 @@
           </div>
           <nav>
             <ul>
-              <li><a href="">Home</a></li>
-              <li><a href="">Gallery</a></li>
-              <li><a href="">Products</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact</a></li>
+              <li><a href="../index.html">Home</a></li>
+              <li><a href="./product1.html">Products</a></li>
+              <li><a href="./about.html">About</a></li>
+              <li><a href="./contact/index.html">Contact</a></li>
             </ul>
           </nav>
         </section>
@@ -118,16 +120,13 @@
           <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
           <div class="icons">
             <a href="">
-              <i class="fa-brands fa-facebook"></i>
+              <i class="fa-brands fa-google"></i>
             </a>
             <a href="">
-              <i class="fa-brands fa-youtube"></i>
+              <i class="fa-solid fa-map-location-dot"></i>
             </a>
             <a href="">
-              <i class="fa-brands fa-twitter"></i>
-            </a>
-            <a href="">
-              <i class="fa-brands fa-instagram"></i>
+              <i class="fa-solid fa-shop"></i>
             </a>
           </div>
         </section>
@@ -135,7 +134,8 @@
     </div>
   </body>
   <script
-    src="https://kit.fontawesome.com/8cfc6428ac.js"
-    crossorigin="anonymous"
+  src="https://kit.fontawesome.com/8cfc6428ac.js"
+  crossorigin="anonymous"
   ></script>
+  <script src="../script/animation.js"></script>
 </html>
