--- a/pages/product2.html
+++ b/pages/product2.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Silver Impregnated Graphite Heavy Duty Contacts</title>
     <link rel="stylesheet" href="../style/product.css">
     <link rel="stylesheet" href="../style/header.css">
     <link rel="stylesheet" href="../style/footer.css">
 </head>
 <body>
     <div id="main">
+      <div class="menu">
+        <nav class="m-nav">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="./product1.html">Products</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./contact/index.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
         <header class="header">
             <div id="logo">
               <img src="../resources/logo.png" alt="" />
@@ -28,6 +38,9 @@
                 </div>
               </div>
             </nav>
+            <div class="menu-icon">
+              <i class="fa-solid fa-bars"></i>
+            </div>
           </header>
         <div id="page-1">
             <div class="imgs">
@@ -67,16 +80,13 @@
               <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
               <div class="icons">
                 <a href="">
-                  <i class="fa-brands fa-facebook"></i>
+                  <i class="fa-brands fa-google"></i>
                 </a>
                 <a href="">
-                  <i class="fa-brands fa-youtube"></i>
+                  <i class="fa-solid fa-map-location-dot"></i>
                 </a>
                 <a href="">
-                  <i class="fa-brands fa-twitter"></i>
-                </a>
-                <a href="">
-                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-solid fa-shop"></i>
                 </a>
               </div>
             </section>
@@ -84,4 +94,8 @@
     </div>
 </body>
 <script src="../script/script.js"></script>
+<script
+src="https://kit.fontawesome.com/8cfc6428ac.js"
+crossorigin="anonymous"
+></script>
 </html>
