--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -1,19 +1,33 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="style.css">
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Contact Us</title>
+    <meta name="description" content="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
     <!-- Fontawesome icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="../../style/header.css">
-    <link rel="stylesheet" href="../../style/footer.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../../style/header.css" />
+    <link rel="stylesheet" href="../../style/footer.css" />
   </head>
   <body>
-    
+    <div class="menu">
+      <nav class="m-nav">
+        <ul>
+          <li><a href="../../index.html">Home</a></li>
+          <li><a href="../product1.html">Products</a></li>
+          <li><a href="../about.html">About</a></li>
+          <li><a href="./index.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <header class="header">
       <div id="logo">
         <img src="../resources/logo.png" alt="" />
@@ -22,8 +36,8 @@
         <ul>
           <li><a href="../../index.html" class="nav">Home</a></li>
           <li><a href="../product1.html" class="nav">Products</a></li>
-          <li><a href="../about.html" class="nav ">About</a></li>
-          <li><a href="./index.html" class="nav  active">Contact</a></li>
+          <li><a href="../about.html" class="nav">About</a></li>
+          <li><a href="./index.html" class="nav active">Contact</a></li>
         </ul>
         <div id="srch">
           <input type="text" placeholder="Search..." />
@@ -32,66 +46,94 @@
           </div>
         </div>
       </nav>
+      <div class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
+      </div>
     </header>
-    <section class = "contact-section">
-      <div class = "contact-bg">
+    <section class="contact-section">
+      <div class="contact-bg">
         <h3>Get in Touch with Us</h3>
         <h2>contact us</h2>
-        <div class = "line">
+        <div class="line">
           <div></div>
           <div></div>
           <div></div>
         </div>
-        <p class = "text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda iste facilis quos impedit fuga nobis modi debitis laboriosam velit reiciendis quisquam alias corporis, maxime enim, optio ab dolorum sequi qui.</p>
+        <p class="text">
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda
+          iste facilis quos impedit fuga nobis modi debitis laboriosam velit
+          reiciendis quisquam alias corporis, maxime enim, optio ab dolorum
+          sequi qui.
+        </p>
       </div>
 
-
-      <div class = "contact-body">
-        <div class = "contact-info">
+      <div class="contact-body">
+        <div class="contact-info">
           <div>
-            <span><i class = "fas fa-mobile-alt"></i></span>
+            <span><i class="fas fa-mobile-alt"></i></span>
             <span>Phone No.</span>
-            <span class = "text">1-2392-23928-2</span>
+            <span class="text">1-2392-23928-2</span>
           </div>
           <div>
-            <span><i class = "fas fa-envelope-open"></i></span>
+            <span><i class="fas fa-envelope-open"></i></span>
             <span>E-mail</span>
-            <span class = "text">mail@company.com</span>
+            <span class="text">mail@company.com</span>
           </div>
           <div>
-            <span><i class = "fas fa-map-marker-alt"></i></span>
+            <span><i class="fas fa-map-marker-alt"></i></span>
             <span>Address</span>
-            <span class = "text">2939 Patrick Street, Vicotria TX, United States</span>
+            <span class="text"
+              >JL NO. 16, , P.O : Rasapunja Bakrahat Road, J R Industrial Estate,, Banagram, Bishnupur, Kolkata-700104, West Bengal, India</span
+            >
           </div>
           <div>
-            <span><i class = "fas fa-clock"></i></span>
+            <span><i class="fas fa-clock"></i></span>
             <span>Opening Hours</span>
-            <span class = "text">Monday - Friday (9:00 AM to 5:00 PM)</span>
+            <span class="text">Monday - Friday (9:00 AM to 5:00 PM)</span>
           </div>
         </div>
 
-        <div class = "contact-form">
+        <div class="contact-form">
           <form>
             <div>
-              <input type = "text" class = "form-control" placeholder="First Name">
-              <input type = "text" class = "form-control" placeholder="Last Name">
+              <input
+                type="text"
+                class="form-control"
+                placeholder="First Name"
+                id="fname"
+              />
+              <input id="lname" type="text" class="form-control" placeholder="Last Name" />
             </div>
             <div>
-              <input type = "email" class = "form-control" placeholder="E-mail">
-              <input type = "text" class = "form-control" placeholder="Phone">
+              <input type="email" id="email" class="form-control" placeholder="E-mail" />
+              <input type="text" id="phone" class="form-control" placeholder="Phone" />
             </div>
-            <textarea rows = "5" placeholder="Message" class = "form-control"></textarea>
-            <input type = "submit" class = "send-btn" value = "send message">
+            <textarea
+            id="comment"
+              rows="5"
+              placeholder="Message"
+              class="form-control"
+            ></textarea>
+            <input type="submit" class="send-btn" value="send message" />
           </form>
 
           <div>
-            <img src = "image/contact-png.png" alt = "">
+            <img src="image/contact-png.png" alt="" />
           </div>
         </div>
       </div>
 
-      <div class = "map">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d223700.1490386933!2d-97.11558670486288!3d28.829485511234168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864266db2e2dac3b%3A0xeee20d566f63267d!2sVictoria%2C%20TX%2C%20USA!5e0!3m2!1sen!2snp!4v1604921178092!5m2!1sen!2snp" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+      <div class="map">
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d223700.1490386933!2d-97.11558670486288!3d28.829485511234168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864266db2e2dac3b%3A0xeee20d566f63267d!2sVictoria%2C%20TX%2C%20USA!5e0!3m2!1sen!2snp!4v1604921178092!5m2!1sen!2snp"
+          width="100%"
+          height="450"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
       </div>
     </section>
     <footer>
@@ -101,11 +143,10 @@
         </div>
         <nav>
           <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Products</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="../../index.html">Home</a></li>
+            <li><a href="../product1.html">Products</a></li>
+            <li><a href="../about.html">About</a></li>
+            <li><a href="./index.html">Contact</a></li>
           </ul>
         </nav>
       </section>
@@ -123,10 +164,14 @@
           <a href="">
             <i class="fa-solid fa-shop"></i>
           </a>
-          
         </div>
       </section>
     </footer>
-
   </body>
+  <script src="https://smtpjs.com/v3/smtp.js"></script>
+  <script src="../../script/sendmail.js"></script>
+  <script
+  src="https://kit.fontawesome.com/8cfc6428ac.js"
+  crossorigin="anonymous"
+></script>
 </html>
