--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CAG Industries</title>
+    <title>CAg Industries</title>
   </head>
   <link rel="stylesheet" href="./style/style.css" />
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"> -->
@@ -55,7 +55,7 @@
         </header>
         <div id="hero">
           <section>
-            <h1 style="color: #fff">CAG Industries</h1>
+            <h1 style="color: #fff">CAg  INDUSTRIES</h1>
             <section id="ani">
               <p>
                 Powering Rail with Precision <br />
@@ -145,7 +145,7 @@
         <section id="p8-ani">
           <h1>Our Story</h1>
           <p>
-            CAG industries is one of the leading manufacturers & exporters of
+            CAg industries is one of the leading manufacturers & exporters of
             Silver impregnated graphite contact in India. We design,
             manufacture, and export all kinds of SIG products. Conceived with a
             notion to provide world-class and supreme quality heating elements
@@ -263,25 +263,25 @@
 
           <div class="text3">
             <span>Welcome to</span>
-            <h1>CAG Industries</h1>
+            <h1>CAg Industries</h1>
             <p>
-              Cag Industries, a pioneering firm specializing in the
+              CAg Industries, a pioneering firm specializing in the
               manufacturing of Silver Impregnated Graphite Contacts, stands as a
               testament to years of dedication, technical expertise, and a
               commitment to excellence. Founded on a solid foundation of
               technical knowledge and experience garnered through systematic
-              research, Cag Industries has emerged as a trusted provider of
+              research, CAg Industries has emerged as a trusted provider of
               high-quality contacts for various railway signaling relay
               manufacturers and Indian Railways.
               <br />
-              The journey of Cag Industries has been characterized by a
+              The journey of CAg Industries has been characterized by a
               relentless pursuit of technical proficiency and innovation. With a
               profound understanding of the intricacies of contact operation and
               an unwavering focus on quality, the firm has developed Silver
               Impregnated Graphite Contacts that are compatible with a wide
               range of signaling relays conforming to BRS Standards. This
               compatibility has been validated by a vast database of satisfied
-              customers who rely on Cag Industries' products for critical
+              customers who rely on CAg Industries' products for critical
               contact applications.
             </p>
             <a href="./pages/about.html">
@@ -322,7 +322,7 @@
       <footer>
         <section>
           <div class="logo">
-            <h1>CAG Industries</h1>
+            <h1>CAg Industries</h1>
           </div>
           <nav>
             <ul>
@@ -334,8 +334,8 @@
           </nav>
         </section>
         <section class="con">
-          <span> <i class="fa-solid fa-envelope"></i> support@cagind.in</span>
-          <span> <i class="fa-solid fa-envelope"></i> info@cagind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> support@CAgind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> info@CAgind.in</span>
           <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
           <div class="icons">
             <a href="">
