--- a/pages/about.html
+++ b/pages/about.html
@@ -46,24 +46,24 @@
         </header>
         <section class="con">
           <div class="head">
-            <h1>CAG Industries</h1>
+            <h1>CAg Industries</h1>
             <span> Manufacturers of Silver Impregrated Graphite Contact</span>
           </div>
           <section class="col">
             <div class="left">
               <p>
-                Cag Industries, a pioneering firm specializing in the manufacturing of Silver Impregnated Graphite Contacts, stands as a testament to years of dedication, technical expertise, and a commitment to excellence. Founded on a solid foundation of technical knowledge and experience garnered through systematic research, Cag Industries has emerged as a trusted provider of high-quality contacts for various railway signaling relay manufacturers and Indian Railways.
+                CAg Industries, a pioneering firm specializing in the manufacturing of Silver Impregnated Graphite Contacts, stands as a testament to years of dedication, technical expertise, and a commitment to excellence. Founded on a solid foundation of technical knowledge and experience garnered through systematic research, CAg Industries has emerged as a trusted provider of high-quality contacts for various railway signaling relay manufacturers and Indian Railways.
               </p>
               <p>
-                The journey of Cag Industries has been characterized by a relentless pursuit of technical proficiency and innovation. With a profound understanding of the intricacies of contact operation and an unwavering focus on quality, the firm has developed Silver Impregnated Graphite Contacts that are compatible with a wide range of signaling relays conforming to BRS Standards. This compatibility has been validated by a vast database of satisfied customers who rely on Cag Industries' products for critical contact applications.
+                The journey of CAg Industries has been characterized by a relentless pursuit of technical proficiency and innovation. With a profound understanding of the intricacies of contact operation and an unwavering focus on quality, the firm has developed Silver Impregnated Graphite Contacts that are compatible with a wide range of signaling relays conforming to BRS Standards. This compatibility has been validated by a vast database of satisfied customers who rely on CAg Industries' products for critical contact applications.
               </p>
               <p>
-                At the core of Cag Industries' ethos lies a commitment to professionalism and quality of service. The driving force behind the firm's success is the proven skills and dedication of its people. With a team of technically trained and qualified professionals, Cag Industries strives to establish and maintain effective schemes for developing a foolproof quality management system. This system is implemented under the direct supervision of management, ensuring that every aspect of production meets the highest standards of quality and reliability.
+                At the core of CAg Industries' ethos lies a commitment to professionalism and quality of service. The driving force behind the firm's success is the proven skills and dedication of its people. With a team of technically trained and qualified professionals, CAg Industries strives to establish and maintain effective schemes for developing a foolproof quality management system. This system is implemented under the direct supervision of management, ensuring that every aspect of production meets the highest standards of quality and reliability.
               </p>
               <br />
               
               <p>
-                Cag Industries is not content with resting on past achievements; instead, it remains a dynamic and vibrant entity focused on continuous improvement. The firm places a strong emphasis on constant upgradation of its systems, technology, and human resources to achieve and exceed the quality targets set by the organization. Through a combination of hard work and modern management techniques, Cag Industries actively promotes excellence in the quality of its products, leading to greater efficiency and profitability.
+                CAg Industries is not content with resting on past achievements; instead, it remains a dynamic and vibrant entity focused on continuous improvement. The firm places a strong emphasis on constant upgradation of its systems, technology, and human resources to achieve and exceed the quality targets set by the organization. Through a combination of hard work and modern management techniques, CAg Industries actively promotes excellence in the quality of its products, leading to greater efficiency and profitability.
               </p>
             </div>
             <div class="right">
@@ -103,7 +103,7 @@
       <footer>
         <section>
           <div class="logo">
-            <h1>CAG Industries</h1>
+            <h1>CAg Industries</h1>
           </div>
           <nav>
             <ul>
@@ -115,8 +115,8 @@
           </nav>
         </section>
         <section class="con">
-          <span> <i class="fa-solid fa-envelope"></i> support@cagind.in</span>
-          <span> <i class="fa-solid fa-envelope"></i> info@cagind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> support@CAgind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> info@CAgind.in</span>
           <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
           <div class="icons">
             <a href="">
