--- a/pages/product1.html
+++ b/pages/product1.html
@@ -66,7 +66,7 @@
       <footer>
         <section>
           <div class="logo">
-            <h1>CAG Industries</h1>
+            <h1>CAg Industries</h1>
           </div>
           <nav>
             <ul>
@@ -78,8 +78,8 @@
           </nav>
         </section>
         <section class="con">
-          <span> <i class="fa-solid fa-envelope"></i> support@cagind.in</span>
-          <span> <i class="fa-solid fa-envelope"></i> info@cagind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> support@CAgind.in</span>
+          <span> <i class="fa-solid fa-envelope"></i> info@CAgind.in</span>
           <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
           <div class="icons">
             <a href="">
