--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -30,7 +30,7 @@
     </div>
     <header class="header">
       <div id="logo">
-        <img src="../resources/logo.png" alt="" />
+        <img src="../../resources/logo.png" alt="" />
       </div>
       <nav>
         <ul>
@@ -60,10 +60,7 @@
           <div></div>
         </div>
         <p class="text">
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Assumenda
-          iste facilis quos impedit fuga nobis modi debitis laboriosam velit
-          reiciendis quisquam alias corporis, maxime enim, optio ab dolorum
-          sequi qui.
+          We're thrilled to hear from you! Whether you have a question about our products, want to provide feedback, or just want to say hello, we're here and ready to assist you.
         </p>
       </div>
 
@@ -72,12 +69,13 @@
           <div>
             <span><i class="fas fa-mobile-alt"></i></span>
             <span>Phone No.</span>
-            <span class="text">1-2392-23928-2</span>
+            <span class="text">+91 80374 04327</span>
           </div>
           <div>
             <span><i class="fas fa-envelope-open"></i></span>
             <span>E-mail</span>
-            <span class="text">mail@company.com</span>
+            <span class="text">info@cagindustries.in</span>
+            <span class="text">support@cagindustries.in</span>
           </div>
           <div>
             <span><i class="fas fa-map-marker-alt"></i></span>
@@ -125,7 +123,7 @@
 
       <div class="map">
         <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d223700.1490386933!2d-97.11558670486288!3d28.829485511234168!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x864266db2e2dac3b%3A0xeee20d566f63267d!2sVictoria%2C%20TX%2C%20USA!5e0!3m2!1sen!2snp!4v1604921178092!5m2!1sen!2snp"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3687.6048079001303!2d88.2827265743492!3d22.44389553767704!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a027b367d9ac969%3A0x3848f6ac143d629f!2sCAG%20INDUSTRIES!5e0!3m2!1sen!2sin!4v1714215051224!5m2!1sen!2sin"
           width="100%"
           height="450"
           frameborder="0"
@@ -151,17 +149,17 @@
         </nav>
       </section>
       <section class="con">
-        <span> <i class="fa-solid fa-envelope"></i> support@CAgind.in</span>
-        <span> <i class="fa-solid fa-envelope"></i> info@CAgind.in</span>
-        <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
+        <span> <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span>
+        <span> <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span>
+        <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
         <div class="icons">
-          <a href="">
+          <a href="https://g.co/kgs/E7WXVkK" target="_blank">
             <i class="fa-brands fa-google"></i>
           </a>
-          <a href="">
+          <a href="https://maps.app.goo.gl/2X2DQTiJgirWDjCs9" target="_blank">
             <i class="fa-solid fa-map-location-dot"></i>
           </a>
-          <a href="">
+          <a href="https://www.indiamart.com/cag-industries/" target="_blank">
             <i class="fa-solid fa-shop"></i>
           </a>
         </div>
