--- a/pages/product2.html
+++ b/pages/product2.html
@@ -75,17 +75,17 @@
               </nav>
             </section>
             <section class="con">
-              <span> <i class="fa-solid fa-envelope"></i> support@CAgind.in</span>
-              <span> <i class="fa-solid fa-envelope"></i> info@CAgind.in</span>
-              <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
+              <span> <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span>
+              <span> <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span>
+              <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
               <div class="icons">
-                <a href="">
+                <a href="https://g.co/kgs/E7WXVkK" target="_blank">
                   <i class="fa-brands fa-google"></i>
                 </a>
-                <a href="">
+                <a href="https://maps.app.goo.gl/2X2DQTiJgirWDjCs9" target="_blank">
                   <i class="fa-solid fa-map-location-dot"></i>
                 </a>
-                <a href="">
+                <a href="https://www.indiamart.com/cag-industries/" target="_blank">
                   <i class="fa-solid fa-shop"></i>
                 </a>
               </div>
