--- a/index.html
+++ b/index.html
@@ -6,8 +6,35 @@
     <title>CAg Industries</title>
   </head>
   <link rel="stylesheet" href="./style/style.css" />
+  <link rel="stylesheet" href="./style/header.css" />
+  <link rel="stylesheet" href="./style/footer.css" />
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"> -->
   <body>
+    <header class="header">
+      <div id="logo">
+        <img src="../resources/logo.png" alt="" />
+      </div>
+      <nav>
+        <ul>
+          <li><a href="./index.html" class="nav active">Home</a></li>
+          <li><a href="#page-4" class="nav">Products</a></li>
+
+          <li><a href="./pages/about.html" class="nav">About</a></li>
+          <li>
+            <a href="./pages/contact/index.html" class="nav">Contact</a>
+          </li>
+        </ul>
+        <div id="srch">
+          <input type="text" placeholder="Search..." />
+          <div class="s-icon">
+            <i class="fa-solid fa-magnifying-glass"></i>
+          </div>
+        </div>
+      </nav>
+      <div class="menu-icon">
+        <i class="fa-solid fa-bars"></i>
+      </div>
+    </header>
     <div id="main">
       <div class="menu">
         <nav class="m-nav">
@@ -19,6 +46,7 @@
           </ul>
         </nav>
       </div>
+
       <div id="page-1">
         <div id="slider">
           <img src="./resources/p1.webp" alt="" />
@@ -26,36 +54,10 @@
           <img src="./resources/p2.webp" alt="" />
           <img src="./resources/p6.jpg" alt="" />
         </div>
-        <header>
-          <div id="logo">
-            <img src="./resources/logo.png" alt="" />
-          </div>
-          <nav>
-            <ul>
-              <li><a href="./index.html" class="nav active">Home</a></li>
-              <li>
-                <a href="#page-4" class="nav">Products</a>
-              </li>
-              <li><a href="" class="nav">Gallery</a></li>
-              <li><a href="./pages/about.html" class="nav">About</a></li>
-              <li>
-                <a href="./pages/contact/index.html" class="nav">Contact</a>
-              </li>
-            </ul>
-            <div id="srch">
-              <input type="text" placeholder="Search..." />
-              <div class="s-icon">
-                <i class="fa-solid fa-magnifying-glass"></i>
-              </div>
-            </div>
-          </nav>
-          <div class="menu-icon">
-            <i class="fa-solid fa-bars"></i>
-          </div>
-        </header>
+
         <div id="hero">
           <section>
-            <h1 style="color: #fff">CAg  INDUSTRIES</h1>
+            <h1 style="color: #fff">CAg INDUSTRIES</h1>
             <section id="ani">
               <p>
                 Powering Rail with Precision <br />
@@ -334,17 +336,21 @@
           </nav>
         </section>
         <section class="con">
-          <span> <i class="fa-solid fa-envelope"></i> support@CAgind.in</span>
-          <span> <i class="fa-solid fa-envelope"></i> info@CAgind.in</span>
-          <span> <i class="fa-solid fa-phone"></i> +91 8436529670</span>
+          <span>
+            <i class="fa-solid fa-envelope"></i> support@cagindustries.in</span
+          >
+          <span>
+            <i class="fa-solid fa-envelope"></i> info@cagindustries.in</span
+          >
+          <span> <i class="fa-solid fa-phone"></i> +91 8037404327</span>
           <div class="icons">
-            <a href="">
+            <a href="https://g.co/kgs/E7WXVkK" target="_blank">
               <i class="fa-brands fa-google"></i>
             </a>
-            <a href="">
+            <a href="https://maps.app.goo.gl/2X2DQTiJgirWDjCs9" target="_blank">
               <i class="fa-solid fa-map-location-dot"></i>
             </a>
-            <a href="">
+            <a href="https://www.indiamart.com/cag-industries/" target="_blank">
               <i class="fa-solid fa-shop"></i>
             </a>
           </div>
